adding updates on the running scripts